# protopy

./: .gitignore  LICENSE  README.md  pyproject.toml
etc/rp/: lock.toml
protopy/: application.py  cli.py  protopy.py
protopy/cli/commands/: generate_command.py  man_command.py
protopy/cli/sources/: __init__.py  file_system_source.py  git_source.py  url_source.py  zip_source.py
protopy/cli/utils/: resources.py
protopy/commands/: new_command.py
protopy/sources/: __init__.py  file_system_source.py  git_source.py  url_source.py  zip_source.py
protopy/utils/: resources.py
protopy_lib/: README.md  pyproject.toml
protopy_lib/etc/rp/: lock.toml
protopy_lib/protopy/: doc_generator.py  engine.py
