[tool.poetry]
name = "protopy-lib"
version = "0.1.0"
description = ""
authors = ["bennylut"]
packages = [{include = "protopy_lib"}]

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^3.0.1"
cleo = "^1.0.0a4"


[build-system]
requires = ["relaxed-poetry-core>=0.0.7"]
build-backend = "poetry.core.masonry.api"
