[tool.poetry]
name = "protopy-lib"
version = "$version"
description = "Library for rendering directory trees."
authors = ["bennylut"]
packages = [{include = "protopy"}]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^3.0.1"
cleo = "^1.0.0a4"


[build-system]
requires = ["relaxed-poetry-core>=0.0.7"]
build-backend = "poetry.core.masonry.api"
